--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -69,7 +69,7 @@
         </th:block>
         <th:block sec:authorize="isAuthenticated()">
           <li><a class="dropdown-item" href="/editprofile">editprofile</a></li>
-          <li><a class="dropdown-item" href="/changePw">setting</a></li>
+          <li><a class="dropdown-item" href="/mypage/changePw">setting</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="/logout">로그아웃</a></li>
         </th:block>
