--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -142,6 +142,12 @@
             height: 100%;
         }
 
+        .btn-close {
+            position: absolute;
+            top: 5%;
+            right: 5%;
+        }
+
         .preview-container {
             position: relative;
             padding: 0 !important;
@@ -310,6 +316,7 @@
             </div>
         </div>
         <div id="select-book" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="selectBookLabel" aria-hidden="true">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -350,6 +357,7 @@
             </div>
         </div>
         <div id="editor" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editorLabel" aria-hidden="true">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             <div class="modal-dialog modal-dialog-centered modal-xl">
                 <div class="modal-content">
                     <div class="container-fluid">
