--- a/src/main/resources/templates/plan/showplan.html
+++ b/src/main/resources/templates/plan/showplan.html
@@ -162,7 +162,7 @@
     // 마커 추가하기 함수
     function addMarker(status, info) {
         // status 에 따라 아이콘 바꾸기
-        imgUrl = `http://tmapapis.sktelecom.com/upload/tmap/marker/pin_r_m_${status}.png`;
+        imgUrl = `https://tmapapi.tmapmobility.com/upload/tmap/marker/pin_b_m_${status}.png`;
 
         // 관광지 목록에 추가한 대로 marker 생성
         marker = new Tmapv2.Marker({
